--- a/_includes/components/header.njk
+++ b/_includes/components/header.njk
@@ -96,9 +96,13 @@
                 <li>
                     <a href="/contact" class="main">Contact</a>
                 </li>
+
             </ul>
         </nav>
+                <div>
 
+                            <a href="/appointments" class="rts-btn btn-primary">Book Appointment</a>
+                </div>
         <div class="rts-social-style-one pl--20 mt--100">
             <ul>
                 <li>
