--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -103,7 +103,7 @@
 <main>
     <section style="text-align:center; padding: 50px;">
         <h1>Website Temporarily Unavailable</h1>
-        <p>We are currently resolving an issue. Please check back later.</p>
+        <p>We are currently resolving the issue. Please check back later.</p>
     </section>
 </main>
 
