--- a/_includes/layouts/base(original).njk
+++ b/_includes/layouts/base(original).njk
@@ -98,15 +98,13 @@
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body class="index-two onepage">
+    <!-- Header Area -->
+    {% include "components/header.njk" %}
 
     <!-- Main Content -->
-<main>
-    <section style="text-align:center; padding: 50px;">
-        <h1>Website Temporarily Unavailable</h1>
-        <p>Please check back later.</p>
-    </section>
-</main>
-
+    <main>
+        {{ content | safe }}
+    </main>
 
     <!-- Progress Wrap -->
     <div class="progress-wrap">
@@ -138,6 +136,9 @@
 
     <div id="anywhere-home"></div>
 
+    <!-- Footer Area -->
+    {% include "components/footer.njk" %}
+
     <!-- Scripts -->
     <script defer src="/assets/js/plugins/jquery.min.js"></script>
     <script defer src="/assets/js/vendor/jqueryui.js"></script>
@@ -157,6 +158,3 @@
     <script defer src="/assets/js/custom.js"></script>
 </body>
 </html>
-
-
-
