--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -98,13 +98,15 @@
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body class="index-two onepage">
-    <!-- Header Area -->
-    {% include "components/header.njk" %}
 
     <!-- Main Content -->
-    <main>
-        {{ content | safe }}
-    </main>
+<main>
+    <section style="text-align:center; padding: 50px;">
+        <h1>Website Temporarily Unavailable</h1>
+        <p>Please check back later.</p>
+    </section>
+</main>
+
 
     <!-- Progress Wrap -->
     <div class="progress-wrap">
@@ -136,9 +138,6 @@
 
     <div id="anywhere-home"></div>
 
-    <!-- Footer Area -->
-    {% include "components/footer.njk" %}
-
     <!-- Scripts -->
     <script defer src="/assets/js/plugins/jquery.min.js"></script>
     <script defer src="/assets/js/vendor/jqueryui.js"></script>
@@ -158,3 +157,6 @@
     <script defer src="/assets/js/custom.js"></script>
 </body>
 </html>
+
+
+
