career page and sitemap

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -31,9 +31,7 @@
     <link rel="canonical" href="{{ metadata.url }}{{ page.url }}">
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/assets/images/fav.png">
     <link rel="manifest" href="/site.webmanifest">
 
     <!-- Structured Data -->
@@ -96,6 +94,8 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/assets/css/style.css">
+
+    <link rel="stylesheet" href="/assets/css/custom.css">
 </head>
 <body class="index-two onepage">
     <!-- Header Area -->
