--- a/_includes/components/header.njk
+++ b/_includes/components/header.njk
@@ -91,6 +91,9 @@
                     <a href="/services" class="main">Services</a>
                 </li>
                 <li>
+                    <a href="/careers" class="main">Careers</a>
+                </li>
+                <li>
                     <a href="/strategy" class="main">Strategy</a>
                 </li>
                 <li>
