--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -127,8 +127,7 @@
     <div class="col-lg-12">
         <p class="company-info">
             ZERONET CLEAN ENERGY LIMITED is registered under the Uganda Registration Services Bureau (URSB),
-            Registration Number: <strong>80034575413440</strong>. <br>
-            Copyright {% year %} All Rights Reserved.
+            Registration Number: 80034575413440. <br> Copyright {% year %} All Rights Reserved.
         </p>
     </div>
 </div>
