--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="accept-file-size" content="7340032"> <!-- 7MB -->
 
     <!-- Primary Meta Tags -->
     <title>{{ title or metadata.title }} | ZERONET Clean Energy</title>
@@ -83,6 +85,9 @@
     <!-- Plugin CSS -->
     <link rel="preload" href="/assets/css/plugins/fontawesome-6.css" as="style">
     <link rel="preload" href="/assets/css/plugins/swiper.css" as="style">
+    <link rel="preload" href="/assets/css/style.css" as="style">
+    <link rel="preload" href="/assets/css/custom.css" as="style">
+
     <link rel="stylesheet" href="/assets/css/plugins/fontawesome-6.css">
     <link rel="stylesheet" href="/assets/css/plugins/swiper.css">
     <link rel="stylesheet" href="/assets/css/plugins/unicons.css">
@@ -94,7 +99,6 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/assets/css/style.css">
-
     <link rel="stylesheet" href="/assets/css/custom.css">
 </head>
 <body class="index-two onepage">
@@ -140,21 +144,21 @@
     {% include "components/footer.njk" %}
 
     <!-- Scripts -->
-    <script defer src="/assets/js/plugins/jquery.min.js"></script>
-    <script defer src="/assets/js/vendor/jqueryui.js"></script>
-    <script defer src="/assets/js/plugins/counter-up.js"></script>
-    <script defer src="/assets/js/plugins/swiper.js"></script>
-    <script defer src="/assets/js/plugins/metismenu.js"></script>
-    <script defer src="/assets/js/vendor/waypoint.js"></script>
-    <script defer src="/assets/js/vendor/waw.js"></script>
-    <script defer src="/assets/js/plugins/gsap.min.js"></script>
-    <script defer src="/assets/js/plugins/scrolltigger.js"></script>
-    <script defer src="/assets/js/vendor/split-text.js"></script>
-    <script defer src="/assets/js/vendor/contact.form.js"></script>
-    <script defer src="/assets/js/vendor/split-type.js"></script>
-    <script defer src="/assets/js/plugins/jquery-timepicker.js"></script>
-    <script defer src="/assets/js/plugins/bootstrap.min.js"></script>
-    <script defer src="/assets/js/main.js"></script>
-    <script defer src="/assets/js/custom.js"></script>
+    <script src="/assets/js/plugins/jquery.min.js"></script>
+    <script src="/assets/js/vendor/jqueryui.js"></script>
+    <script src="/assets/js/plugins/counter-up.js"></script>
+    <script src="/assets/js/plugins/swiper.js"></script>
+    <script src="/assets/js/plugins/metismenu.js"></script>
+    <script src="/assets/js/vendor/waypoint.js"></script>
+    <script src="/assets/js/vendor/waw.js"></script>
+    <script src="/assets/js/plugins/gsap.min.js"></script>
+    <script src="/assets/js/plugins/scrolltigger.js"></script>
+    <script src="/assets/js/vendor/split-text.js"></script>
+    <script src="/assets/js/vendor/contact.form.js"></script>
+    <script src="/assets/js/vendor/split-type.js"></script>
+    <script src="/assets/js/plugins/jquery-timepicker.js"></script>
+    <script src="/assets/js/plugins/bootstrap.min.js"></script>
+    <script src="/assets/js/main.js"></script>
+
 </body>
 </html>
