--- a/_includes/components/header.njk
+++ b/_includes/components/header.njk
@@ -18,9 +18,8 @@
                         </div>
                         <div class="right">
                             <div class="social-header-top-h2">
-                                <span>Visit Us:</span>
+                                <span>Follow Us:</span>
                                 <ul>
-                                    <li><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
                                     <li><a href="https://www.linkedin.com/company/zeronet-clean-energy-ltd/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
                                 </ul>
                             </div>
